objects/LLC_BI__Document_Collection_Index__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Document_Collection_Reference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required. This field associates the Document Store record where the file is held.</description>
        <label>Document Collection</label>
        <referenceTo>LLC_BI__Document_Collection__c</referenceTo>
        <relationshipLabel>Document Collection Indices</relationshipLabel>
        <relationshipName>Document_Collection_Indices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Collection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>--DEPRECATED-- Use Document_Collection_Reference__c.</description>
        <label>-D Document Collection</label>
        <referenceTo>LLC_BI__Document_Store__c</referenceTo>
        <relationshipLabel>Document Collection Indices</relationshipLabel>
        <relationshipName>Document_Collection_Indices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Metadata__c</fullName>
        <description>This optional field is used for storing additional metadata relevant to the related document.</description>
        <inlineHelpText>This optional field is used for storing additional metadata relevant to the related document.</inlineHelpText>
        <label>Document Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required. This field associates the Document Collection record which represents a collection of documents.</description>
        <label>Document Store</label>
        <referenceTo>LLC_BI__Document_Store__c</referenceTo>
        <relationshipLabel>Document Store Collection Indices</relationshipLabel>
        <relationshipName>Document_Store_Collection_Indices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vendor_Document_Id__c</fullName>
        <description>This field is optional and is an identifier used by external vendor. For example, E-Signature document Id.</description>
        <externalId>true</externalId>
        <label>Vendor Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Collection Index</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DCI-{0000000000}</displayFormat>
        <label>Document Collection Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Collection Indices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>